--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.13.0",
+    "@react-google-maps/api": "^2.20.7",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "chart.js": "^4.5.1",
     "crypto-js": "^4.2.0",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/axios": "^0.9.36",
+    "@types/google.maps": "^3.58.1",
     "@types/leaflet": "^1.9.21",
     "@types/node": "^24.10.1",
     "@types/react": "^19.1.16",
